Trying to add an applet
Trying to add the completed applet to the web page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
+<applet width="650" height="550" archive="ColorSprint.jar"
+        code="com.bitcamp_2014.main" /> 
+
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
